--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -536,5 +536,6 @@
     "Total_money": "Общий доход",
     "Top5": "Топ 5 продаваемых продуктов",
     "Bottom5": "Топ 5 наименее продаваемых продуктов",
-    "AddAll": "Добавить всё"
+    "AddAll": "Добавить всё",
+    "notifies":"Уведомления"
 }
