--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -535,5 +535,6 @@
     "Total_money": "Jami Daromad",
     "Top5": "Top 5 Sotiladigan Mahsulotlar",
     "Bottom5": "Top 5 Kam Sotiladigan Mahsulotlar",
-    "AddAll": "Xamasini qoshish"
+    "AddAll": "Xamasini qoshish",
+    "notifies": "Xabarnomalar"
 }
