--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -536,7 +536,7 @@
   "Top5": "Top 5 Best-Selling Products",
   "Bottom5": "Top 5 Least-Selling Products",
   "AddAll": "Add All",
-  "notifies":"Notifies"
+  "notifies":"Notifies",
   "Creaete_Category": "Create Category",
   "Delete_Category": "Delete Category",
   "Delete__text_Category": "Are you sure you want to delete this category? This action cannot be undone!",
