--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -536,7 +536,7 @@
     "Top5": "Top 5 Sotiladigan Mahsulotlar",
     "Bottom5": "Top 5 Kam Sotiladigan Mahsulotlar",
     "AddAll": "Xamasini qoshish",
-    "notifies": "Xabarnomalar"
+    "notifies": "Xabarnomalar",
     "Creaete_Category": "Kategoriya yaratish",
     "Delete_Category": "Kategoriya o‘chirish",
     "Delete__text_Category": "Siz ushbu kategoriyani o‘chirmoqchimisiz? Bu amalni qaytarib bo‘lmaydi!",
