--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -537,10 +537,15 @@
     "Top5": "Топ 5 продаваемых продуктов",
     "Bottom5": "Топ 5 наименее продаваемых продуктов",
     "AddAll": "Добавить всё",
-    "notifies":"Уведомления",
+    "notifies": "Уведомления",
     "Creaete_Category": "Создание категорий",
     "Delete_Category": "Уделения категорий",
     "Delete__text_Category": "Вы действительно хотите удалить этот категорий? Это действие нельзя отменить!",
     "Edit_Category": "Изменений категорий",
-    "Category": "Категорий"
+    "Category": "Категорий",
+    "Access": "Разрешения",
+    "Sells": "Продажа",
+    "invoise": "Заявки",
+    "CreateAt": "Создана",
+    "No_choise": "Не указан"
 }
