--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -547,5 +547,6 @@
     "Sells": "Продажа",
     "invoise": "Заявки",
     "CreateAt": "Создана",
-    "No_choise": "Не указан"
+    "No_choise": "Не указан",
+    "seller": "Продавец"
 }
