--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -541,5 +541,6 @@
     "Delete_Category": "Kategoriya o‘chirish",
     "Delete__text_Category": "Siz ushbu kategoriyani o‘chirmoqchimisiz? Bu amalni qaytarib bo‘lmaydi!",
     "Edit_Category": "Kategoriya tahrirlash",
-    "Category": "Kategoriya"
+    "Category": "Kategoriya",
+    "new_order": "Yangi buyurtma"
 }
