--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -541,5 +541,6 @@
   "Delete_Category": "Delete Category",
   "Delete__text_Category": "Are you sure you want to delete this category? This action cannot be undone!",
   "Edit_Category": "Edit Category",
-  "Category": "Category"
+  "Category": "Category",
+  "new_order": "New Order"
 }
