--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -548,5 +548,6 @@
     "invoise": "Заявки",
     "CreateAt": "Создана",
     "No_choise": "Не указан",
-    "seller": "Продавец"
+    "seller": "Продавец",
+    "new_order": "Новый заказ"
 }
