--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -553,5 +553,6 @@
     "operations": "Операции",
     "order_history": "История заказов",
     "order_subtitle": "Управление заказами и их отслеживание",
-    "button.create_order": "Создать заказ"
+    "button.create_order": "Создать заказ",
+    "empty_data_text": "Здесь пока нет никаких данных. Попробуйте добавить новую запись или вернитесь позже."
 }
