--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -536,7 +536,7 @@
   "Top5": "Top 5 Best-Selling Products",
   "Bottom5": "Top 5 Least-Selling Products",
   "AddAll": "Add All",
-  "notifies":"Notifies",
+  "notifies": "Notifies",
   "Creaete_Category": "Create Category",
   "Delete_Category": "Delete Category",
   "Delete__text_Category": "Are you sure you want to delete this category? This action cannot be undone!",
@@ -546,5 +546,6 @@
   "operations": "Operations",
   "order_history": "Order History",
   "order_subtitle": "Audit, filters and exports for all factory orders",
-  "button.create_order": "Create Order"
+  "button.create_order": "Create Order",
+  "empty_data_text": "There is no data here yet. Try adding a new entry or come back later."
 }
