--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -546,5 +546,6 @@
     "operations": "Operatsiyalar",
     "orders_history": "Buyurtmalar tarixi",
     "order_subtitle": "Barcha buyurtmalarni ko‘rib chiqish, boshqarish va eksport qilish",
-    "button.create_order": "Yangi buyurtma yaratish"
+    "button.create_order": "Yangi buyurtma yaratish",
+    "empty_data_text": "Bu yerda hozircha hech qanday ma’lumot yo‘q. Yangi yozuv qo‘shib ko‘ring yoki keyinroq qaytib keling."
 }
