--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -544,8 +544,10 @@
     "Category": "Kategoriya",
     "new_order": "Yangi buyurtma",
     "operations": "Operatsiyalar",
-    "orders_history": "Buyurtmalar tarixi",
+    "order_history": "Buyurtmalar tarixi",
     "order_subtitle": "Barcha buyurtmalarni ko‘rib chiqish, boshqarish va eksport qilish",
     "button.create_order": "Yangi buyurtma yaratish",
-    "empty_data_text": "Bu yerda hozircha hech qanday ma’lumot yo‘q. Yangi yozuv qo‘shib ko‘ring yoki keyinroq qaytib keling."
+    "empty_data_text": "Bu yerda hozircha hech qanday ma’lumot yo‘q. Yangi yozuv qo‘shib ko‘ring yoki keyinroq qaytib keling.",
+    "delete_only_zero": "Faqat summasi 0 bo‘lgan invoice o‘chiriladi"
+
 }
