--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -555,5 +555,8 @@
     "order_subtitle": "Управление заказами и их отслеживание",
     "button.create_order": "Создать заказ",
     "empty_data_text": "Здесь пока нет никаких данных. Попробуйте добавить новую запись или вернитесь позже.",
-    "delete_only_zero": "Удаление возможно только для счетов с суммой 0"
+    "delete_only_zero": "Удаление возможно только для счетов с суммой 0",
+    "courier": "Курьер",
+    "comment": "Комментарий",
+    "discount": "Скидка"
 }
