--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -548,6 +548,9 @@
   "order_subtitle": "Audit, filters and exports for all factory orders",
   "button.create_order": "Create Order",
   "empty_data_text": "There is no data here yet. Try adding a new entry or come back later.",
-  "delete_only_zero": "Only invoices with a total amount of 0 can be deleted"
+  "delete_only_zero": "Only invoices with a total amount of 0 can be deleted",
+  "courier": "Courier",
+  "comment": "Comment",
+  "discount": "Discount"
   
 }
