--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -551,7 +551,7 @@
     "delete_only_zero": "Faqat summasi 0 bo‘lgan invoice o‘chiriladi",
     "courier": "Kuryer",
     "comment": "Izoh",
-    "discount": "Chegirma"
+    "discount": "Chegirma",
     "Material": "Material",
     "Create_material": "Material yaratish",
     "Delete_material": "Material o'chirish",
