--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -555,5 +555,6 @@
     "Material": "Material",
     "Create_material": "Material yaratish",
     "Delete_material": "Material o'chirish",
-    "Edit_material": "Material o'zgartirish"
+    "Edit_material": "Material o'zgartirish",
+    "priceChangedNewBatchRequired": "Narx o‘zgardi, amaldagi partiya yopilib, yangi partiya ochilishi lozim"
 }
