--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -559,12 +559,24 @@
     "courier": "Курьер",
     "comment": "Комментарий",
     "discount": "Скидка",
-    "Material":"Материалы",
-    "Create_material":"Создать материал",
+    "Material": "Материалы",
+    "Create_material": "Создать материал",
     "Delete_material": "Удалить материал",
     "Product_materila_text": "Материалы для продукта",
     "total_prew": "Указано",
     "Select_Material": "Выбрано материалов",
-    "priceChangedNewBatchRequired":"Цена изменена, текущая партия должна быть закрыта и создана новая",
-    "warehouse_type_missing":"Тип склада не определён"
+    "priceChangedNewBatchRequired": "Цена изменена, текущая партия должна быть закрыта и создана новая",
+    "warehouse_type_missing": "Тип склада не определён",
+    "uploadExelTitle": "Загрузка Excel файла",
+    "Upload": "Загрузить",
+    "Uploading...": "Загрузка...",
+    "uploadSkipeTitle": "Результаты загрузки",
+    "uploadSkipeSummaryTitle": "Сводка загрузки",
+    "uploadSkipeSummarySucces": "Продукты успешно созданы",
+    "uploadSkipedProduct": "Пропущенные продукты (уже существуют)",
+    "ExelTotalProduct": "Всего обработано",
+    "ExelSuccessCreated": "Успешно создано",
+    "ExelSiped": "Пропущено (уже существует)",
+    "uploadSkipeMaterialSucces": "Материалы успешно созданы"
+    
 }
