--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -570,5 +570,6 @@
     "Upload": "Yuklash",
     "Uploading...": "Yuklanmoqda...",
     "MainWarehouse": "Asosiy ombor",
-    "MaterialWarehouse": "Materiallar ombori"
+    "MaterialWarehouse": "Materiallar ombori",
+    "MaterialPArtner": "Xomashyo xamkori"
 }
